# podcast

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: documentation-policy.md
docs/runbooks/: first-episode-runbook.md
docs/superpowers/plans/: 2026-05-09-podcast-production-pipeline.md
docs/superpowers/specs/: 2026-05-09-podcast-production-pipeline-design.md
inputs/: outline.md
podcast_pipeline/: __init__.py  __main__.py  assemble.py  audio.py  cli.py  config.py  content_map.py  demo.py  edit_decision.py  llm.py  postproduction.py  publish_assets.py  runtime_env.py  schemas.py  style.py  transcribe.py  transcript_import.py
podcast_pipeline/prompts/: content_map.md  demo_feedback.md  demo_selection.md  final_edit_decision.md  shownotes.md  style_freeze.md
tests/: test_assemble.py  test_audio.py  test_cli.py  test_config.py  test_content_map.py  test_demo.py  test_edit_decision.py  test_llm.py  test_publish_assets.py  test_runtime_env.py  test_schemas.py  test_style.py  test_transcribe.py  test_transcript_import.py
用于阅读/: 播客AI生产流程实施计划.md  播客AI生产流程设计.md  文档生成规则.md  第一期播客运行手册.md
